# gxt

./: .gitignore  Cargo.toml  README.md  glossary.md  spec.md  test.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
advisory/: trade.schema.json
docs/: index.html  main.js
docs/pkg/: gxt_wasm.js  gxt_wasm_bg.wasm
gxt/: Cargo.toml
gxt-api-c/: Cargo.toml  build.rs
gxt-api-c/src/: lib.rs
gxt-api-csharp/: UpgradeLog.htm  gxt-api-csharp.sln
gxt-api-csharp/Backup/: gxt-api-csharp.sln
gxt-api-csharp/gxt-api-csharp/: .gitignore  Class1.cs  Gxt.Advisory.cs  Gxt.cs  Gxt.csproj  gxt-api-csharp.csproj
gxt-api-csharp/test-app/: Program.cs  test-app.csproj
gxt-api-extism/: Cargo.toml  README.md
gxt-api-extism/.cargo/: config.toml
gxt-api-extism/example/: Cargo.toml
gxt-api-extism/example/src/: main.rs
gxt-api-extism/src/: lib.rs
gxt-api-python/: Cargo.toml  pyproject.toml
gxt-api-python/src/: lib.rs
gxt-cli/: Cargo.toml  build.rs
gxt-cli/examples/: simple_trade_offer.rs
gxt-cli/src/: main.rs  server.rs  ui.rs
gxt-cli/ui/: app-window.slint
gxt-extism-types/: Cargo.toml
gxt-extism-types/src/: lib.rs
gxt-viewer/: Cargo.toml
gxt-viewer/src/: app.rs  lib.rs  main.rs
gxt-viewer/ui/: app-window.slint
gxt-wasm/: Cargo.toml  README.md
gxt-wasm/.cargo/: config.toml
gxt-wasm/src/: lib.rs
gxt/src/: advisory.rs  internal.rs  lib.rs
web/: index.html  main.js  styles.css
