[workspace]
resolver = "2"
members = ["gxt", "gxt-cli"]

[workspace.package]
edition = "2024"
description = "Minimal, encrypted, signed and copy-pasteable tokens for manual data exchange between games"
authors = ["hardliner66"]
license = "MIT OR Apache-2.0"
version = "0.8.0"
repository = "https://github.com/hardliner66/gxt"

[workspace.dependencies]
serde_json = "1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
