[workspace]
resolver = "2"
members = ["gxt", "gxt-cli", "gxt-api-c", "gxt-api-extism"]

[workspace.package]
edition = "2024"
description = "Minimal, encrypted, signed and copy-pasteable tokens for manual data exchange between games"
authors = ["hardliner66"]
license = "MIT OR Apache-2.0"
version = "0.27.0"
repository = "https://github.com/hardliner66/gxt"
documentation = "https://docs.rs/gxt/latest/gxt/"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_cbor = "0.11"
gxt = { version = "0.27.0", path = "gxt" }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
