[workspace]
resolver = "2"
members = [
    "gxt",
    "gxt-api-c",
    "gxt-api-extism",
    "gxt-cli",
    "gxt-extism-types",
    "gxt-wasm",
    "gxt-viewer",
]
exclude = ["gxt-api-extism", "gxt-api-c", "gxt-wasm"]
default-members = ["gxt-cli"]

[workspace.package]
edition = "2024"
description = "Minimal, encrypted, signed and copy-pasteable tokens for manual data exchange between games"
authors = ["hardliner66"]
license = "MIT OR Apache-2.0"
version = "2.2.0"
repository = "https://github.com/game-exchange-token/gxt"
documentation = "https://docs.rs/gxt/latest/gxt/"

[workspace.dependencies]
gxt = { version = "2.0.0", path = "gxt" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = { version = "1", features = ["preserve_order"] }

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
opt-level = 2
codegen-units = 1
