[package]
name = "gxt-api-c"
edition = "2024"
description.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
documentation.workspace = true

[lib]
name = "gxt_c"
crate-type = ["staticlib", "cdylib"]

[dependencies]
gxt = { version = "0.18.0", path = "../gxt" }
serde_json.workspace = true

[build-dependencies]
cbindgen = "0.29.0"
