[package]
name = "gxt-api-c"
edition = "2024"
description.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
documentation.workspace = true
publish = false

[lib]
name = "gxt_c"
crate-type = ["staticlib", "cdylib"]

[dependencies]
serde_json.workspace = true
gxt = { version = "0.20.0", path = "../gxt" }

[build-dependencies]
cbindgen = "0.29.0"
