[package]
name = "gxt-api-extism"
edition = "2024"
description.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
documentation.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.3.0"
serde = { version = "1", features = ["derive"] }
# getrandom = { version = "0.2.16", features = ["custom"] }
gxt = { version = "0.21.0", path = "../gxt" }
