[package]
name = "gxt-api-extism"
edition = "2024"
version = "0.22.0"
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
gxt.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_cbor.workspace = true
extism-pdk = "1.3.0"
gxt-extism-types = { version = "0.24.0", path = "../gxt-extism-types" }
