[package]
name = "gxt-api-extism"
edition = "2024"
version = "0.22.0"
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
publish = false
include = ["src/lib.rs", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.3.0"
gxt.workspace = true
gxt-extism-types = { version = "2.0.0", path = "../gxt-extism-types" }
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
