[package]
name = "gxt-cli"
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"

[[bin]]
name = "gxt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
gxt.workspace = true
serde_json.workspace = true
slint = "1.13"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
rfd = "0.15.4"
elevated-command = "1.1.2"
registry = "1.3.0"
utfx = "0.1.0"

[build-dependencies]
slint-build = "1.13"
