[package]
name = "gxt-cli"
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"

[[bin]]
name = "gxt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
gxt.workspace = true

rfd = { version = "0.15.4", optional = true }
slint = { version = "1.13", optional = true }
stringlit = "2.1.0"
windows-sys = { version = "0.61.0", features = [
    "Win32",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System",
    "Win32_System_Console",
], optional = true }

[build-dependencies]
slint-build = { version = "1.13", optional = true }

[features]
default = []
ui = ["dep:slint", "dep:slint-build", "dep:rfd", "dep:windows-sys"]
windows-sys = ["dep:windows-sys"]
