[package]
name = "gxt-extism-types"
edition = "2024"
version = "0.27.0"
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gxt.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_cbor.workspace = true
extism-convert = "1.3.0"
