[package]
name = "gxt-extism-types"
edition = "2024"
version = "2.0.1"
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
extism-convert = "1.3.0"
gxt.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
