[package]
name = "gxt-viewer"
edition = "2024"
description.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gxt.workspace = true
serde_json.workspace = true
slint = "1.13"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
anyhow = "1.0.99"
rfd = "0.15.4"
clap = { version = "4.5.47", features = ["derive"] }
elevated-command = "1.1.2"
registry = "1.3.0"
utfx = "0.1.0"

[build-dependencies]
slint-build = "1.13"
