[package]
name = "gxt"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
serde_json.workspace = true
serde_cbor.workspace = true
getrandom = { version = "0.2.16", features = ["js"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
blake3 = "1.5"
brotli = "3"
bs58 = "0.5"
thiserror = "1"
x25519-dalek = "1"
chacha20poly1305 = "0.10"
rand = "0.8"
