[package]
name = "gxt"
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"

[lib]
crate-type = ["lib"]

[dependencies]
blake3 = "1.5"
bs58 = "0.5"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
hex.workspace = true
rand = "0.8"
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zstd = { version = "0.13.3", features = ["wasm"] }
